--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
   <meta charset="utf-8">
   <title>Ovimi</title>
+  <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <base href="/ovimi/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <link rel="stylesheet" href="/ovimi/styles.ef46db3751d8e999.css"></head>
 <body>
   <app-root></app-root>
-<script src="/ovimi/runtime.5b9268c8c07abd91.js" type="module"></script><script src="/ovimi/polyfills.01ea1c7e13d85d04.js" type="module"></script><script src="/ovimi/main.1f6ef4521f34ff3c.js" type="module"></script></body>
+<script src="/ovimi/runtime.5b9268c8c07abd91.js" type="module"></script><script src="/ovimi/polyfills.01ea1c7e13d85d04.js" type="module"></script><script src="/ovimi/main.78b8ff804e13ed2d.js" type="module"></script></body>
 </html>
